[gd_scene load_steps=6 format=3 uid="uid://1egfkkafsgpl"]

[ext_resource type="Theme" uid="uid://ce7gdo6lqyra0" path="res://study room theme.tres" id="1_spnoi"]
[ext_resource type="Script" path="res://scenes/location_tab/location_script.gd" id="1_u6sgc"]
[ext_resource type="FontFile" uid="uid://dis5kj2s7vfny" path="res://fonts/KOMIKAX_.ttf" id="3_8hlew"]
[ext_resource type="FontFile" uid="uid://cbiw803j5las3" path="res://fonts/Louis George Cafe.ttf" id="3_vhjev"]

[sub_resource type="Theme" id="Theme_7jcog"]
default_font = ExtResource("3_vhjev")

[node name="location_panel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_spnoi")
script = ExtResource("1_u6sgc")

[node name="location_name" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.326
anchor_top = 0.049
anchor_right = 0.889
anchor_bottom = 0.173
offset_left = -166.552
offset_top = 6.248
offset_right = -167.128
offset_bottom = -2.104
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.541176, 0.45098, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/normal_font = ExtResource("3_8hlew")
theme_override_font_sizes/normal_font_size = 30

[node name="location_picture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.056
anchor_top = 0.296
anchor_right = 0.479
anchor_bottom = 0.889
offset_left = -0.512001
offset_top = 0.192001
offset_right = -7.80798
offset_bottom = -0.0720215

[node name="location_information" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.528
anchor_top = 0.346
anchor_right = 0.944
anchor_bottom = 0.938
offset_left = -0.255981
offset_top = -0.208008
offset_right = 0.511963
offset_bottom = 0.175964
theme = SubResource("Theme_7jcog")
theme_override_font_sizes/normal_font_size = 20

[node name="ReviewRequest" type="HTTPRequest" parent="."]

[node name="rating_picture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.257
anchor_top = 0.198
anchor_right = 0.479
anchor_bottom = 0.284
offset_left = -0.0639954
offset_top = -0.304016
offset_right = 0.191956
offset_bottom = -0.0320129

[node name="rating_desc" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.507
anchor_top = 0.222
anchor_right = 0.708
anchor_bottom = 0.296
offset_left = -0.0640259
offset_top = 0.143982
offset_right = 0.383911
offset_bottom = 0.192017
theme_override_font_sizes/normal_font_size = 14

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.09
anchor_bottom = 0.099
offset_left = 26.0
offset_top = 25.0
offset_right = 26.32
offset_bottom = 24.848
text = "Close"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 925.0
offset_top = 28.0
offset_right = 1119.0
offset_bottom = 92.0
text = "Leave/View Reviews"

[connection signal="panel_closed" from="." to="." method="close_panel"]
[connection signal="request_completed" from="ReviewRequest" to="." method="_on_review_request_request_completed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_leave_pressed"]
